--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.3",
     "@vuepic/vue-datepicker": "^8.8.0",
+    "postmark": "^4.0.5",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
